@@ -20,14 +20,17 @@ public class FAQMenu extends CommonMenu {
             Object faq = super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find((new Document("name", "faq")).append("subj", Byte.parseByte(this.getSubject()))).first();
             if (faq != null) {
                 faq = ((Map<String, String>) faq).get("questions");
+                System.out.println(faq);
+                byte i = 0;
                 for (Object current : (ArrayList) faq) {
                     Iterator<Object> currentIterators = ((Document) current).values().iterator();
                     while (currentIterators.hasNext()) {
-                        ArrayList<String> text = new ArrayList<>(Arrays.asList(currentIterators.next().toString(), currentIterators.next().toString()));
-                        if (text.get(1).startsWith("http://") || text.get(1).startsWith("https://"))
-                            this.getAllButtons().add(new ArrayList<>(List.of(new Button(text.get(0), new URL(text.get(1))))));
+                        String question = currentIterators.next().toString();
+                        String answer = currentIterators.next().toString();
+                        if (answer.startsWith("http://") || answer.startsWith("https://"))
+                            this.getAllButtons().add(new ArrayList<>(List.of(new Button(question, new URL(answer)))));
                         else {
-                            this.getAllButtons().add(new ArrayList<>(List.of(new Button(text.get(0), "quest=Domanda:\n" + text.get(0) + "\n\nRisposta:\n" + text.get(1)))));
+                            this.getAllButtons().add(new ArrayList<>(List.of(new Button(question, "quest:name=faq,subj="+this.getSubject()+",q="+i++))));
                         }
                     }
                 }
